# VoiceBased3DModelling

./: Makefile  pyproject.toml  voicebased3dmodelling.py
